[gd_scene load_steps=5 format=3 uid="uid://15knvok220q0"]

[ext_resource type="Script" path="res://dissapearing_platforms.gd" id="1_4a2wx"]
[ext_resource type="Texture2D" uid="uid://by5mfbj1gtfxm" path="res://platforms.png" id="1_crfpi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqttb"]
size = Vector2(90, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nkk6"]
size = Vector2(88, 12.5)

[node name="dissapearing_platforms" type="AnimatableBody2D"]
script = ExtResource("1_4a2wx")

[node name="sprite2d" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.875, 1.38889)
texture = ExtResource("1_crfpi")
region_enabled = true
region_rect = Rect2(0, 48, 48, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nqttb")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 27.75)
shape = SubResource("RectangleShape2D_8nkk6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
